--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="AURA - Environmental Monitoring Dashboard" />
     <meta property="og:description" content="Real-time flood and rain monitoring system for Klang River" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!--<meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />-->
 
     <meta name="twitter:card" content="summary_large_image" />
     <!--<meta name="twitter:site" content="@lovable_dev" />-->
